RESOLVED FIXED131323
REGRESSION (r163194-r163227): Garbage tiles in overflow of RTL page with background image
https://bugs.webkit.org/show_bug.cgi?id=131323
Summary REGRESSION (r163194-r163227): Garbage tiles in overflow of RTL page with back...
Beth Dakin
Reported 2014-04-07 16:04:28 PDT
RTL pages with margin tiles (repeating background image) have garbage pixels. <rdar://problem/16402013>
Attachments
Patch (4.46 KB, patch)
2014-04-07 16:17 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2014-04-07 16:17:16 PDT
Alexey Proskuryakov
Comment 2 2014-04-08 10:22:08 PDT
Comment on attachment 228768 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=228768&action=review > Source/WebCore/ChangeLog:7 > + REGRESSION (r163194-r163227): Garbage tiles in overflow of RTL page with > + background image > + https://bugs.webkit.org/show_bug.cgi?id=131323 > + -and corresponding- > + <rdar://problem/16402013> This can't be tested, can it?
Ahmad Saleem
Comment 3 2022-10-25 13:22:05 PDT
Landed and didn't backed out - https://github.com/WebKit/WebKit/commit/9cab94a05940e230853f6089309a0e8e9776de38 Marking this as "RESOLVED FIXED".
Note You need to log in before you can comment on or make changes to this bug.